fix home redirect

--- a/public/src/app/login/login.component.html
+++ b/public/src/app/login/login.component.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="col-md-12 mt-3 textAligneCenter">
-          <button mat-button>Iniciar sesión</button>
+          <button mat-button (click)="onSubmit()">Iniciar sesión</button>
         </div>
 
 
