--- a/public/src/app/home/home.component.scss
+++ b/public/src/app/home/home.component.scss
@@ -1,17 +1,59 @@
-.example-container {
+.home-container {
   width: 100%;
-  height: 100vh;
+
+  .sidebar {
+    display: flex;
+    width: 15% !important;
+    height: 100vh !important;
+    align-items: center;
+    justify-content: center;
+
+    .button-sidebar {
+      font-size: 1.9em !important;
+    }
+
+    .sidebar-item-list {
+      margin-left: 10%;
+      width: 100%;
+      height: 30%;
+      text-align: center;
+
+      .sidebar-item-icon {
+        font-size: 1.2em;
+        margin-right: 10px
+      }
+
+      &:hover{
+        background: red;
+
+        .sidebar-item-icon {
+          color:blue;
+        }
+      }
+    }
+  }
+
+  .separator {
+    flex: 1 1 auto;
+  }
+
+  .icon {
+    margin-top: 0;
+    font-size: 1.3em;
+  }
+
+  .views-container {
+    display: flex;
+    height: 90vh;
+    align-items: center;
+    justify-content: center;
+    overflow-y: scroll;
+  }
 }
 
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
+
 
 .example-sidenav {
-  max-width: 30% !important;
 
   padding: 20px;
 }
