--- a/public/src/styles.scss
+++ b/public/src/styles.scss
@@ -12,19 +12,29 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$Atrae-primary: mat-palette($mat-indigo);
-$Atrae-accent: mat-palette($mat-pink, A200, A100, A400);
+$light-theme-primary: mat-palette($mat-indigo);
+
+$light-theme-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$Atrae-warn: mat-palette($mat-red);
+$light-theme-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$Atrae-theme: mat-light-theme($Atrae-primary, $Atrae-accent, $Atrae-warn);
+$light-theme: mat-light-theme($light-theme-primary, $light-theme-accent, $light-theme-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($Atrae-theme);
+@include angular-material-theme($light-theme);
+
+$dark-theme-primary: mat-palette($mat-deep-purple);
+
+$dark-primary: mat-palette($mat-blue-grey);
+$dark-accent:  mat-palette($mat-amber, A200, A100, A400);
+$dark-warn:    mat-palette($mat-deep-orange);
+$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+
+
 
 /* You can add global styles to this file, and also import other style files */
 
@@ -37,6 +47,10 @@ body {
   margin: 0;
   font-size: 16px;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+
+  a{
+    text-decoration: none;
+  }
 
   .flexContainer {
     display: flex;
@@ -105,6 +119,11 @@ body {
     -webkit-box-direction: reverse;
     -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
+  }
+
+  .p-fixed {
+    position: fixed;
+    top: 0
   }
 
   .col-xs,
@@ -1027,176 +1046,164 @@ body {
 
   .m-1 {
     @include desktop {
-      margin: 1em;
+      margin: 1em !important;
     }
 
     @include retina {
-      margin: 1em;
+      margin: 1em !important;
     }
 
     @include laptop {
-      margin: 1em;
+      margin: 1em !important;
     }
   }
 
   .p-1 {
     padding: 1em;
   }
-
   .mt-1 {
     margin-top: 1em;
   }
-
   .pt-1 {
     padding-top: 1em;
   }
-
   .mb-1 {
     margin-bottom: 1em;
   }
-
   .pb-1 {
     padding-bottom: 1em;
   }
-
   .ml-1 {
     margin-left: 1em;
   }
-
   .pl-1 {
     padding-left: 1em;
   }
-
   .mr-1 {
     margin-right: 1em;
   }
-
   .pr-1 {
     padding-right: 1em;
   }
-
   .m-2 {
     margin: 2em;
   }
-
   .p-2 {
     padding: 2em;
   }
-
   .mt-2 {
     margin-top: 2em;
   }
-
   .pt-2 {
     padding-top: 2em;
   }
-
   .mb-2 {
     margin-bottom: 2em;
   }
-
   .pb-2 {
     padding-bottom: 2em;
   }
-
   .ml-2 {
     margin-left: 2em;
   }
-
   .pl-2 {
     padding-left: 2em;
   }
-
   .mr-2 {
     margin-right: 2em;
   }
-
   .pr-2 {
     padding-right: 2em;
   }
-
   .m-3 {
     margin: 3em;
   }
-
   .p-3 {
     padding: 3em;
   }
-
   .mt-3 {
     margin-top: 3em;
   }
-
   .pt-3 {
     padding-top: 3em;
   }
-
   .mb-3 {
     margin-bottom: 3em;
   }
-
   .pb-3 {
     padding-bottom: 3em;
   }
-
   .ml-3 {
     margin-left: 3em;
   }
-
   .pl-3 {
     padding-left: 3em;
   }
-
   .mr-3 {
     margin-right: 3em;
   }
-
   .pr-3 {
     padding-right: 3em;
   }
-
   .m-4 {
     margin: 4em;
   }
-
   .p-4 {
     padding: 4em;
   }
-
   .mt-4 {
     margin-top: 4em;
   }
-
   .pt-4 {
     padding-top: 4em;
   }
-
   .mb-4 {
     margin-bottom: 4em;
   }
-
   .pb-4 {
     padding-bottom: 4em;
   }
-
   .ml-4 {
     margin-left: 4em;
   }
-
   .pl-4 {
     padding-left: 4em;
   }
-
   .mr-4 {
     margin-right: 4em;
   }
-
   .pr-4 {
     padding-right: 4em;
   }
-
   .m-5 {
     margin: 5em;
+  }
+  .p-5 {
+    padding: 5em;
+  }
+  .mt-5 {
+    margin-top: 5em;
+  }
+  .pt-5 {
+    padding-top: 5em;
+  }
+  .mb-5 {
+    margin-bottom: 5em;
+  }
+  .pb-5 {
+    padding-bottom: 5em;
+  }
+  .ml-5 {
+    margin-left: 5em;
+  }
+  .pl-5 {
+    padding-left: 5em;
+  }
+  .mr-5 {
+    margin-right: 5em;
+  }
+  .pr-5 {
+    padding-right: 5em;
   }
 
   .m-6 {
