--- a/public/src/app/login/login.component.html
+++ b/public/src/app/login/login.component.html
@@ -7,33 +7,30 @@
       <form action="" method="post" class="container-fluid flexContainerCenter row" autocomplete="off">
         <div class="col-md-7 mt-1">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Correo electrónico" [formControl]="emailFormControl"
-              [errorStateMatcher]="matcher" type="email" id>
+            <input matInput placeholder="Correo electrónico" [formControl]="email"
+              [errorStateMatcher]="matcher" type="email">
             <mat-hint>Ingrese su correo electrónico</mat-hint>
-            <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+            <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
               Ingrese un correo electrónico válido
             </mat-error>
-            <mat-error *ngIf="emailFormControl.hasError('required')">
+            <mat-error *ngIf="email.hasError('required')">
               El correo electrónico es <strong>requerido</strong>
             </mat-error>
           </mat-form-field>
         </div>
         <div class="col-md-7 mt-2">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Contraseña" [formControl]="passwordFormControl" [errorStateMatcher]="matcher"
+            <input matInput placeholder="Contraseña" [formControl]="password" [errorStateMatcher]="matcher"
               type="password" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])\S{6,}">
             <mat-hint>Ingrese su contraseña</mat-hint>
-            <mat-error *ngIf="passwordFormControl.hasError('password') && !passwordFormControl.hasError('required')">
-              Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="passwordFormControl.hasError('required')">
+            <mat-error *ngIf="password.hasError('required')">
               La contraseña es <strong>requerida</strong>
             </mat-error>
           </mat-form-field>
         </div>
 
         <div class="col-md-12 mt-3 textAligneCenter">
-          <button mat-button (click)="onSubmit()">Iniciar sesión</button>
+          <button mat-button (click)="onSubmit(email.value, password.value)">Iniciar sesión</button>
         </div>
       </form>
     </mat-card-content>
